# tg-ws-proxy-rs

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml  release.yml
crates/proxy-app/: Cargo.toml
crates/proxy-app/src/: autosetup.rs  main.rs  tray.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: dc.rs  error.rs  lib.rs  mtproto.rs  pool.rs  splitter.rs  stats.rs  tunnel.rs
crates/proxy-core/src/ws/: mod.rs  tungstenite.rs
macos-bundle/: Info.plist  build-app.sh
