[package]
name = "proxy-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
proxy-core = { path = "../proxy-core" }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
open = "5"
tray-icon = "0.19"
muda = "0.15"
arboard = "3"
png = "0.17"
tracing = "0.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console", "Win32_System_Registry"] }
