[package]
name = "proxy-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "macros", "rt-multi-thread", "rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.24"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
rand = "0.9"
tracing = "0.1"
thiserror = "2"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
